jupyter con todos los ajustes

--- a/experimentodensidadrayosgamma/Parafina.ipynb
+++ b/experimentodensidadrayosgamma/Parafina.ipynb
@@ -299,7 +299,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "id": "f8d6f853-ef39-42ff-a560-d232c4e5adeb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xe = np.linspace(lim_inf, lim_sup, 1000)\n",
+    "fig, ax = plt.subplots(figsize = (10,7))\n",
+    "for i in range(4):\n",
+    "    ax.step(x[i], y[i], label = \"datos\"+labels[i])\n",
+    "    ax.plot(xe, exp_gaussian(xe, μ[i].nominal_value, σ[i].nominal_value, M[i].nominal_value, b0[i].nominal_value, b1[i].nominal_value), label = \"ajuste\"+labels[i])\n",
+    "    ax.tick_params(axis = \"both\", which = \"major\", labelsize = 16)\n",
+    "    ax.grid(True, which = \"both\")\n",
+    "    ax.xaxis.set_minor_locator(plt.MultipleLocator(5))\n",
+    "    ax.set_ylim(0, 900)\n",
+    "    ax.set_xlim(lim_inf, lim_sup-1)\n",
+    "    ax.set_ylabel(r\"$I_\\gamma$ (cuentas/canal)\", fontsize = 20)\n",
+    "    ax.set_xlabel(r\"$E_\\gamma$ (canal)\", fontsize = 20)\n",
+    "    ax.legend(fontsize = 16)\n",
+    "    fig.savefig(\"parafina_1_bloque.pdf\", format = \"pdf\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "149f357b-d564-41ea-bf5c-c2af0ea9a024",
    "metadata": {},
    "outputs": [
@@ -345,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "2f5912c5-b80b-4448-9932-8f92da43899b",
    "metadata": {},
    "outputs": [
@@ -371,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "id": "7f032257-7b87-4f4e-8e22-274fe8b8fbde",
    "metadata": {},
    "outputs": [
